--- a/app/package.json
+++ b/app/package.json
@@ -9,20 +9,23 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
-    "typescript": "4.9.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9"
+    "@types/react-dom": "18.0.9",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.4",
+    "typescript": "4.9.3"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "framer-motion": "^7.6.9",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.5",
+    "yup": "^0.32.11"
   }
 }
