--- a/contracts/package.json
+++ b/contracts/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
-    "@openzeppelin/contracts": "^4.8.0",
+    "@openzeppelin/contracts": "4.5.0",
     "@paperxyz/contracts": "^0.1.2",
     "@typechain/ethers-v5": "^10.1.1",
     "@typechain/hardhat": "^6.1.4",
