--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@types/http-status-codes": "^1.2.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -21,7 +22,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
+    "axios": "^1.1.3",
     "framer-motion": "^7.6.9",
+    "http-status-codes": "^2.2.0",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
