--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
     "axios": "^1.1.3",
+    "bignumber.js": "^9.1.0",
     "framer-motion": "^7.6.9",
     "http-status-codes": "^2.2.0",
     "next": "13.0.4",
