--- a/contracts/package.json
+++ b/contracts/package.json
@@ -17,6 +17,7 @@
     "@typechain/hardhat": "^6.1.4",
     "dotenv": "^16.0.3",
     "hardhat": "^2.12.2",
+    "solidity-docgen": "^0.6.0-beta.30",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1"
   }
